Let guest user log in

--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td><%= room.name %></td>
         <td><%= room.description %></td>
-        <td><%= link_to 'Show', room %></td>
+        <td><%= link_to 'Show', new_room_guest_session_path(room.id) %></td>
         <td><%= link_to 'Edit', edit_room_path(room) %></td>
         <td><%= link_to 'Destroy', room, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
